# arduino-audio-driver

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  library.properties
docs/: ZEPHYR_SUPPORT_SUMMARY.md
docs/html/: _a_c101_8h.html  _a_c101_8h_source.html  _a_d1938_8h.html  _a_d1938_8h_source.html  _a_p_i___delay_8cpp.html  _a_p_i___delay_8h.html  _a_p_i___delay_8h_source.html  _a_p_i___g_p_i_o_8h.html  _a_p_i___g_p_i_o_8h_source.html  _a_p_i___i2_c_8h.html  _a_p_i___i2_c_8h_source.html  _a_p_i___i2_c___arduino_8cpp.html  _a_p_i___i2_c___espressif_i_d_f_8cpp.html  _a_p_i___i2_c___zephyr_8cpp.html  _a_p_i___s_p_i_8h.html  _a_p_i___s_p_i_8h_source.html  _a_p_i___s_p_i___arduino_8cpp.html  _a_p_i___s_p_i___others_8cpp.html  _a_w88298_8h.html  _a_w88298_8h_source.html  _all_codecs_8h.html  _all_codecs_8h_source.html  _audio_board_2_e_s_p32_s3_a_i_smart_speaker_8h.html  _audio_board_2_e_s_p32_s3_a_i_smart_speaker_8h_source.html  _audio_board_2_s_t_m32_f411_disco_8h.html  _audio_board_2_s_t_m32_f411_disco_8h_source.html  _audio_board_8h.html  _audio_board_8h_source.html  _audio_board_zephyr_2_e_s_p32_s3_a_i_smart_speaker_8h.html  _audio_board_zephyr_2_e_s_p32_s3_a_i_smart_speaker_8h_source.html  _audio_board_zephyr_2_s_t_m32_f411_disco_8h.html  _audio_board_zephyr_2_s_t_m32_f411_disco_8h_source.html  _audio_boards_8h.html  _audio_boards_8h_source.html  _audio_driver_8h.html  _audio_driver_8h_source.html  _audio_driver_config_8h.html  _audio_driver_config_8h_source.html  _audio_driver_logger_8h.html  _audio_driver_logger_8h_source.html  (+773 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+141 more)
examples/audiotools-custom-max/: audiotools-custom-max.ino
examples/audiotools-sine/: audiotools-sine.ino
examples/audiotools/audiotools-custom-max/: audiotools-custom-max.ino
examples/audiotools/audiotools-custom-min/: audiotools-custom-min.ino
examples/audiotools/audiotools-sine/: audiotools-sine.ino
examples/audiotools/audiotools-standard/: audiotools-standard.ino
examples/custom-max/: custom-max.ino
examples/custom-standard/: custom-standard.ino
examples/custom/custom-max/: custom-max.ino
examples/custom/custom-min/: custom-min.ino
examples/custom/custom-standard/: custom-standard.ino
src/: AudioBoard.h  AudioDriver.h  AudioDriverConfig.h  Common.h  ConfigAudioDriver.h  Driver.h  DriverCommon.h  DriverDeviceInfo.h  DriverDeviceInfoZephyr.h  DriverPins.h  ESP32S3AISmartSpeaker.h  Pins.h  arduino-audio-driver.code-workspace
src/AudioBoard/: ESP32S3AISmartSpeaker.h  M5stackAtomEchoS3RClass.h  README.md  STM32F411Disco.h
src/AudioBoardZephyr/: AudioKitAC101.h  AudioKitEs8388v1.h  AudioKitEs8388v2.h  Lyrat42.h  Lyrat43.h  LyratMini.h  M5stackAtomEchoS3R.h  STM32F411Disco.h
src/AudioBoards/: AudioBoards.h  AudioKitAC101.h  AudioKitEs8388v1.h  AudioKitEs8388v2.h  ESP32S3AISmartSpeaker.h  Lyrat42.h  Lyrat43.h  LyratMini.h  M5stackAtomEchoS3R.h  STM32F411Disco.h
src/BoardsZephyr/: AudioKitEs8388v2.h  ESP32S3AISmartSpeaker.h  Lyrat43.h  LyratMini.h  README.md  STM32F411Disco.h
src/Codecs/: AllCodecs.h  CodecConstants.h  DriverConstants.h  ZephyrDriverCommon.h
src/Codecs/ac101/: AC101.h  ac101.c  ac101.cpp  ac101.h
src/Codecs/ad1938/: AD1938.h  ad1938.cpp  ad1938.h
src/Codecs/aw88298/: AW88298.h
src/Codecs/cs42448/: CS42448.h  cs42448.h
src/Codecs/cs42l51/: CS42L51.h
src/Codecs/cs43l22/: CS43L22.h  cs43l22.c  cs43l22.cpp  cs43l22.h
src/Driver/: DriverConstants.h  pins.cpp
src/Utils/: API_I2C.h  API_SPI.h  AudioDriverLogger.h  I2C.cpp  I2C.h  I2CArduino.cpp  I2CEspressifIDF.cpp  Logger.c  Logger.cpp  Logger.h  Optional.h  SPIOthers.cpp  Vector.h  etc.cpp  etc.h
(+98 files in other folders)
